--- a/src/assets/navbar.css
+++ b/src/assets/navbar.css
@@ -87,6 +87,14 @@
   background-color: #f2f2f2;
 }
 
+/* Xin chào tên người dùng */
+.account-dropdown p.account-name {
+  font-size: 14px;
+  font-weight: bold;
+  color: #111417;
+  margin-bottom: 8px;
+}
+
 /* Tìm kiếm */
 .navbar-search input {
   padding: 6px 10px;
@@ -113,13 +121,16 @@
 @media (max-width: 991.98px) {
   .navbar-collapse {
     background-color: #007bff;
+    padding: 1rem;
   }
 
-  .navbar-collapse .nav-link {
+  .navbar-collapse .nav-link,
+  .nav-custom {
     color: white !important;
   }
 
-  .navbar-collapse .nav-link:hover {
+  .navbar-collapse .nav-link:hover,
+  .nav-custom:hover {
     background-color: rgba(255, 255, 255, 0.2);
     color: white !important;
   }
